--- a/front-end/src/components/SetProblem/set-problem.scss
+++ b/front-end/src/components/SetProblem/set-problem.scss
@@ -1,33 +1,42 @@
 .setproblem-container {
-  height: 656px;
+  min-height: 100vh;
+  background: #f8fafd;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .setproblem-nav {
-  height: 2rem;
-  width: 90%;
-  padding: 1rem 0 1rem 3rem;
+  width: 100%;
+  padding: 1.5rem 0 1rem 2rem;
   display: flex;
   align-items: center;
 }
 
 .setproblem-content-container {
   overflow-y: auto;
-  padding: 1rem 0rem 1rem 3rem;
-  height: 78vh;
+  padding: 1.5rem 2rem 3rem 2rem;
+  max-width: 1300px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.setproblem-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2.2rem;
 }
 
 .setproblem-block-1 {
   display: flex;
   width: 100%;
+  gap: 2rem;
 }
 
-.setproblem-block-1a {
-  flex: 4;
-}
-
+.setproblem-block-1a,
 .setproblem-block-1b {
-  flex: 5;
-  padding-left: 1.5rem;
+  flex: 1;
+  min-width: 0;
 }
 
 .setproblem-block-1b > h4 {
@@ -35,61 +44,144 @@
 }
 
 .setproblem-block-2 {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+  width: 320px;
+  max-width: 100%;
 }
 
-.increase-bottom-padding {
-  height: 15rem;
+.setproblem-block-3 {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
 }
 
-.setproblem-form > h4 {
-  margin-top: 1rem;
+.setproblem-block-3a,
+.setproblem-block-3b {
+  flex: 1;
+  min-width: 0;
 }
 
 .setproblem-examples {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 33.5rem;
-  margin-top: 1rem;
+  margin-top: 0.7rem;
 }
 
 .setproblem-examples-div {
   display: flex;
-  width: 34rem;
   flex-direction: column;
-}
-
-.setproblem-example {
-  width: 33.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.setproblem-block-3 {
-  display: flex;
-}
-
-.setproblem-block-3a {
-  flex: 5;
-}
-
-.setproblem-block-3b {
-  flex: 5;
+  width: 100%;
 }
 
 .test-case-editor {
   margin-top: 1rem;
+  min-width: 0;
 }
 
 .setproblem-block-4 {
-  margin-top: 3rem;
-  width: 94.1%;
+  margin-top: 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.setproblem-block-4a {
+  width: 100%;
+  min-width: 0;
 }
 
 .setproblem-block-4 > button {
-  height: 4rem;
-  letter-spacing: 0.5rem;
-  font-weight: bolder;
+  height: 3.3rem;
+  font-size: 1.12rem;
+  letter-spacing: 0.12rem;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+/* Extra bottom padding for safe scroll */
+.increase-bottom-padding {
+  height: 5rem;
+}
+
+/* -------- Responsive Design -------- */
+@media (max-width: 1100px) {
+  .setproblem-content-container {
+    padding: 1rem 1vw 2rem 1vw;
+  }
+  .setproblem-block-1,
+  .setproblem-block-3 {
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .setproblem-nav {
+    padding-left: 1.1rem;
+  }
+  .setproblem-content-container {
+    padding: 1.1rem 0.5rem 2.5rem 0.5rem;
+    max-width: 100vw;
+  }
+  .setproblem-block-1,
+  .setproblem-block-3 {
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+  .setproblem-block-2,
+  .setproblem-examples-div {
+    width: 100%;
+    min-width: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .setproblem-nav {
+    padding-left: 0.5rem;
+  }
+  .setproblem-content-container {
+    padding: 0.4rem 0.2rem 1.4rem 0.2rem;
+  }
+  .setproblem-form {
+    gap: 1.2rem;
+  }
+  .setproblem-block-1b > h4,
+  .setproblem-examples h4 {
+    font-size: 1.07rem;
+    margin-bottom: 0.6rem;
+  }
+  .setproblem-block-4 > button {
+    font-size: 1.05rem;
+    height: 2.7rem;
+    letter-spacing: 0.07rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .setproblem-block-1a, .setproblem-block-1b, .setproblem-block-3a, .setproblem-block-3b, .setproblem-block-4a {
+    min-width: 0;
+    width: 100%;
+  }
+  .setproblem-examples, .setproblem-examples-div {
+    width: 100%;
+  }
+}
+
+/* Monaco Editor Responsive Height */
+.setproblem-block-1b .monaco-editor, .setproblem-block-4a .monaco-editor {
+  min-height: 240px !important;
+}
+@media (max-width: 900px) {
+  .setproblem-block-1b .monaco-editor, .setproblem-block-4a .monaco-editor {
+    min-height: 180px !important;
+  }
+}
+@media (max-width: 600px) {
+  .setproblem-block-1b .monaco-editor, .setproblem-block-4a .monaco-editor {
+    min-height: 120px !important;
+  }
+  .setproblem-block-3a .monaco-editor, .setproblem-block-3b .monaco-editor {
+    min-height: 100px !important;
+  }
 }
