--- a/front-end/src/components/UpdateProblem/update-problem.scss
+++ b/front-end/src/components/UpdateProblem/update-problem.scss
@@ -1,35 +1,207 @@
 .up-cont {
-  width: 90%;
+  width: 100%;
+  max-width: 1350px;
+  margin: 0 auto;
+  min-height: 100vh;
+  background: #f8fafd;
+  box-sizing: border-box;
 }
 
 .up-cont-b1 {
   width: 100%;
-  padding: 1rem 0 1rem 3rem;
-  height: 2rem;
+  padding: 2rem 2rem 1.2rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
 }
 
 .up-cont-b3 {
   display: flex;
   align-items: center;
   margin-top: 2rem;
+  flex-wrap: wrap;
+  gap: 1.2rem;
   button {
-    margin-left: 1rem;
+    min-width: 100px;
   }
 }
 
 .up-cont-b4 {
-  overflow: auto;
-  height: 455px;
+  overflow-x: auto;
   width: 100%;
+  margin-top: 1.6rem;
+  background: #fff;
+  border-radius: 13px;
+  box-shadow: 0 1px 6px 0 rgba(44, 83, 100, 0.08);
 }
 
 .up-cont-fix1 {
-  padding: 0;
+  padding: 0.5rem 1rem 1rem 1rem;
   margin-top: 0;
-  padding-top: 1rem;
+  width: 100%;
+  max-width: 100vw;
 }
 
 .up-cont-fix2 {
   margin-top: 0;
   padding-top: 1rem;
+}
+
+.setproblem-container {
+  min-height: 100vh;
+  background: none;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.setproblem-content-container {
+  overflow-y: auto;
+  padding: 0;
+  width: 100%;
+}
+
+.setproblem-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2.2rem;
+}
+
+/* ---- Form Layout ---- */
+.setproblem-block-1, .setproblem-block-3 {
+  display: flex;
+  width: 100%;
+  gap: 2rem;
+}
+
+.setproblem-block-1a, .setproblem-block-1b,
+.setproblem-block-3a, .setproblem-block-3b {
+  flex: 1;
+  min-width: 0;
+}
+
+/* Inputs & Editors */
+.setproblem-block-1b > h4,
+.setproblem-block-4a > h4,
+.setproblem-examples > h4 {
+  margin-bottom: 0.8rem;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.setproblem-block-2 {
+  margin-top: 0.6rem;
+  max-width: 420px;
+  width: 100%;
+}
+
+.setproblem-examples {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 0.6rem;
+}
+
+.setproblem-examples-div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+/* Monaco Editor Responsive Height */
+.setproblem-block-1b .monaco-editor, .setproblem-block-4a .monaco-editor {
+  min-height: 240px !important;
+}
+.setproblem-block-3a .monaco-editor, .setproblem-block-3b .monaco-editor {
+  min-height: 120px !important;
+}
+@media (max-width: 900px) {
+  .setproblem-block-1b .monaco-editor, .setproblem-block-4a .monaco-editor {
+    min-height: 180px !important;
+  }
+  .setproblem-block-3a .monaco-editor, .setproblem-block-3b .monaco-editor {
+    min-height: 100px !important;
+  }
+}
+@media (max-width: 600px) {
+  .setproblem-block-1b .monaco-editor, .setproblem-block-4a .monaco-editor {
+    min-height: 110px !important;
+  }
+  .setproblem-block-3a .monaco-editor, .setproblem-block-3b .monaco-editor {
+    min-height: 70px !important;
+  }
+}
+
+/* ---- Responsive Styles ---- */
+@media (max-width: 1100px) {
+  .up-cont-b1 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .setproblem-block-1, .setproblem-block-3 {
+    gap: 1rem;
+  }
+}
+@media (max-width: 900px) {
+  .up-cont-b1 {
+    padding: 1rem 0.7rem;
+  }
+  .setproblem-block-1, .setproblem-block-3 {
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+}
+@media (max-width: 600px) {
+  .up-cont-b1 {
+    padding: 0.4rem 0.3rem;
+  }
+  .up-cont-b3 {
+    gap: 0.6rem;
+    margin-top: 1rem;
+    flex-direction: column;
+    align-items: stretch;
+    button {
+      width: 100%;
+      margin-left: 0 !important;
+    }
+  }
+  .setproblem-form {
+    gap: 1.3rem;
+  }
+  .setproblem-block-1a, .setproblem-block-1b,
+  .setproblem-block-3a, .setproblem-block-3b, .setproblem-block-4a {
+    min-width: 0;
+    width: 100%;
+  }
+  .setproblem-examples, .setproblem-examples-div {
+    width: 100%;
+  }
+  .setproblem-block-2 {
+    max-width: 100vw;
+  }
+}
+
+.setproblem-block-4 {
+  margin-top: 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.setproblem-block-4a {
+  width: 100%;
+  min-width: 0;
+}
+
+.setproblem-block-4 > button {
+  height: 3.2rem;
+  font-size: 1.09rem;
+  letter-spacing: 0.09rem;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.increase-bottom-padding {
+  height: 5rem;
 }
