--- a/front-end/src/pages/ComingSoon/ComingSoon.scss
+++ b/front-end/src/pages/ComingSoon/ComingSoon.scss
@@ -1,55 +1,96 @@
-/* Set the height, width, and background color of the main container */
-
-.comingsoon-container{
-    height: 100vh;
+.comingsoon-container {
+    min-height: 100vh;
     width: 100%;
-    background: #AAFFA9;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #11FFBD, #AAFFA9);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #11FFBD, #AAFFA9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-/* Set the font size and color of the 'h1' element inside 'greatthings' */
-.greatthings{
-    margin-top: 255px;
-    margin-left: 150px;
-    position: absolute;
-    text-align: center;
-}
-
-.greatthings h1{
-    font-size: 100px;
-    color: black;
-     
-}
-
-.greatthings h2{
-    margin-top: 30px;
-    color: black;
-}
-/* Style the 'explore problems' button */
-.explrbtn{
-    margin: 0.7rem 0 0.7rem 0rem;
-    width: 15rem;
-    color: black;
-    background: none; /* fallback for old browsers */
-    border-radius: 10px;
-    height: 40px;
-    border: 1px solid black;
-    font-size: 20px;
-    cursor: pointer;
-
-}
-
-.explrbtn:hover {
-    background: #0F2027;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    color: white;
-    border: 1px solid white;
+    background: linear-gradient(to right, #11FFBD, #AAFFA9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
-/* Set the margin of the container that holds the 'explore problems' button */
-.explrbtndiv{
-
-    margin-top: 20px;
-}
+  
+  .greatthings {
+    text-align: center;
+    width: 100%;
+    max-width: 800px;
+    padding: 2rem;
+    box-sizing: border-box;
+  }
+  
+  .greatthings h1 {
+    font-size: 3.5rem;
+    font-weight: 800;
+    color: #111;
+    margin-bottom: 1.5rem;
+  }
+  
+  .greatthings h2 {
+    font-size: 1.5rem;
+    color: #222;
+    margin-bottom: 2rem;
+  }
+  
+  .explrbtndiv {
+    margin-top: 1.2rem;
+  }
+  
+  .explrbtn {
+    width: 14rem;
+    color: black;
+    background: none;
+    border-radius: 10px;
+    height: 45px;
+    border: 1.5px solid black;
+    font-size: 1.2rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.2s, color 0.2s, border 0.2s;
+    outline: none;
+  
+    &:hover {
+      background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+      color: #fff;
+      border: 1.5px solid #fff;
+    }
+  }
+  
+  /* Responsive design */
+  @media (max-width: 900px) {
+    .greatthings h1 {
+      font-size: 2.3rem;
+    }
+    .greatthings h2 {
+      font-size: 1.1rem;
+    }
+    .greatthings {
+      padding: 1.2rem;
+    }
+    .explrbtn {
+      width: 11rem;
+      font-size: 1rem;
+      height: 40px;
+    }
+  }
+  
+  @media (max-width: 600px) {
+    .comingsoon-container {
+      padding: 0 0.5rem;
+    }
+    .greatthings {
+      max-width: 98vw;
+      padding: 0.8rem;
+    }
+    .greatthings h1 {
+      font-size: 1.45rem;
+      margin-bottom: 1rem;
+    }
+    .greatthings h2 {
+      font-size: 0.98rem;
+      margin-bottom: 1.4rem;
+    }
+    .explrbtn {
+      width: 100%;
+      min-width: 160px;
+      font-size: 0.97rem;
+      height: 38px;
+    }
+  }
+  
