--- a/front-end/src/pages/UserDashboardPage/user-dashboard-page.scss
+++ b/front-end/src/pages/UserDashboardPage/user-dashboard-page.scss
@@ -1,101 +1,171 @@
+// --- Container & Layout
 .user-dashboard-container {
-  height: 657px;
+  min-height: 100vh;
+  padding: 104px 1rem 2rem 1rem; // 104px top padding to account for fixed navbar height
+  box-sizing: border-box;
+  background: #f8fafb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+// --- Top Block: Avatar + Stats
 .ud-block-1 {
-  width: 98%;
-  height: 15rem;
+  width: 100%;
+  max-width: 1050px;
   margin-bottom: 2rem;
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+}
+
+.ud-block-1a, .ud-block-1b {
+  flex: 1 1 340px;
+  min-width: 260px;
+  max-width: 420px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  border-radius: 14px;
+  box-shadow: 0 6px 24px 0 rgba(44,83,100,0.11);
+  background: #fff;
+  padding: 2rem 1.3rem;
 }
 
 .ud-block-1a {
-  width: 25rem;
-  height: 12rem;
-  background-image: url("https://assets.leetcode.com/explore/cards/google/img");
-  background-size: cover;
-  background-position: center;
-  border-radius: 10px;
-  position: relative;
-  display: flex;
-  justify-content: center;
+  background: url("https://assets.leetcode.com/explore/cards/google/img") center/cover no-repeat, #fff;
+  flex-direction: row;
   align-items: center;
 
-  h4,
-  h5 {
-    margin-left: 2rem;
+  .user-avatar {
+    width: 74px;
+    height: 74px;
+    font-size: 2rem;
+    background: #203a43;
+    margin-right: 1.1rem;
   }
-
+  h4 {
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin: 0 0 6px 0;
+  }
   h5 {
-    margin-top: 0.5rem;
+    font-size: 1.08rem;
+    font-weight: 400;
+    opacity: 0.85;
+    margin: 0;
+    word-break: break-all;
   }
 }
 
 .ud-block-1b {
-  width: 25rem;
-  height: 12rem;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  box-sizing: border-box;
-
-  $border: 4px;
-  color: #fff;
   background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-  background-clip: padding-box; /* !importanté */
-  border: solid $border transparent; /* !importanté */
-  border-radius: 1em;
+  color: #fff;
+  align-items: flex-start;
+  padding: 1.3rem 1rem;
+  min-width: 260px;
+  max-width: 400px;
+  border-radius: 14px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
+// --- Chart + Legend
 .ud-chart-legend {
-  width: 8rem;
-  height: 7rem;
-  padding: 2rem;
-  text-align: center;
+  margin-left: 0.8rem;
+  min-width: 100px;
+  text-align: left;
+  h4 {
+    font-size: 1.12rem;
+    font-weight: 600;
+    margin-bottom: 1.1rem;
+  }
 }
 
 .ud-chart-label {
   display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
-
+  align-items: center;
+  gap: 9px;
+  margin-bottom: 0.6rem;
   div {
-    height: 1rem;
-    width: 1rem;
+    height: 1.05rem;
+    width: 1.05rem;
+    border-radius: 4px;
+  }
+  h5 {
+    font-size: 1rem;
+    font-weight: 500;
+    color: #f8fafb;
+    margin: 0;
   }
 }
 
-.ud-cl-easy {
-  background-color: #00c49f;
-}
+.ud-cl-easy { background-color: #00c49f; }
+.ud-cl-medium { background-color: #ffbb28; }
+.ud-cl-hard { background-color: #ff8042; }
 
-.ud-cl-medium {
-  background-color: #ffbb28;
-}
-
-.ud-cl-hard {
-  background-color: #ff8042;
+// --- Solved Problems Table
+.sp-x {
+  margin: 2rem 0 1.2rem 0;
+  text-align: left;
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #232323;
+  width: 100%;
+  max-width: 1020px;
+  padding-left: 0.6rem;
 }
 
 .ud-block-2 {
-  width: 98%;
-  height: 21rem;
-  overflow: auto;
+  width: 100%;
+  max-width: 1020px;
+  background: #fff;
+  border-radius: 14px;
+  box-shadow: 0 4px 18px 0 rgba(44,83,100,0.07);
+  padding: 1.1rem 0.7rem;
+  overflow-x: auto;
 }
 
-.ud-block-2a,
-.ud-block-2b {
-  margin: 1rem 8rem;
+// Responsive Stacking
+@media (max-width: 1050px) {
+  .ud-block-1 {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 1.4rem;
+  }
+  .sp-x, .ud-block-2 { max-width: 98vw; }
 }
-
-.ud-block-2-sp {
-  height: 10rem;
+@media (max-width: 700px) {
+  .user-dashboard-container {
+    padding: 75px 0.3rem 1.2rem 0.3rem;
+  }
+  .ud-block-1a, .ud-block-1b {
+    min-width: 0;
+    padding: 1.2rem 0.5rem;
+  }
+  .ud-block-2 {
+    padding: 0.55rem 0.1rem;
+  }
+  .sp-x {
+    padding-left: 0.2rem;
+    font-size: 1.07rem;
+  }
 }
-
-.sp-x {
-    margin-left: 7.5rem;
-    margin-bottom: 1.5rem;
+@media (max-width: 420px) {
+  .user-dashboard-container {
+    padding-top: 62px;
+  }
+  .ud-block-1a, .ud-block-1b {
+    padding: 0.7rem 0.18rem;
+    border-radius: 8px;
+  }
+  .ud-block-2 {
+    border-radius: 7px;
+    padding: 0.3rem 0.01rem;
+  }
 }
